# ucobs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bench_python.py  deny.toml  justfile  mise.toml
.cargo/: mutants.toml
.github/workflows/: ci.yml
benches/: bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_encode.rs  fuzz_roundtrip.rs  fuzz_small_dest.rs
proptest-regressions/: lib.txt
src/: lib.rs
