[package]
name = "ucobs"
version = "0.3.2"
edition = "2021"
rust-version = "1.93"
license = "MIT"
description = "μCOBS — Consistent Overhead Byte Stuffing. no_std, zero-alloc, fastest, most-tested COBS implementation."
authors = ["Stephen Waits <steve@waits.net>"]
repository = "https://github.com/swaits/ucobs"
homepage = "https://github.com/swaits/ucobs"
documentation = "https://docs.rs/ucobs"
readme = "README.md"
keywords = ["cobs", "framing", "no-std", "embedded", "codec"]
categories = ["encoding", "no-std::no-alloc", "embedded"]

[features]
default = []
legacy-msrv = []

[lints.rust]
unsafe_code = "forbid"

[package.metadata.docs.rs]
all-features = true

[dev-dependencies]
cobs = "0.5"
corncobs = "0.1"
iai-callgrind = "0.16"
proptest = "1"
rand = "0.10"

[[bench]]
name = "bench"
harness = false
